--- a/src/styles/blocks/card/__image/card__image.css
+++ b/src/styles/blocks/card/__image/card__image.css
@@ -2,6 +2,9 @@
   height: 282px;
   object-fit: cover;
   width: 100%;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 .card__image:hover {
