--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -7,6 +7,8 @@
 @import url('../styles/blocks/profile/profile.css');
 @import url('../styles/blocks/places/places.css');
 @import url('../styles/blocks/card/card.css');
+@import url('../styles/blocks/card/__like-count/card__like-count.css');
+@import url('../styles/blocks/card/__likes/card__likes.css');
 @import url('../styles/blocks/popup/popup.css');
 @import url('../styles/blocks/popup/_is-animated/popup_is-animated.css');
 @import url('../styles/blocks/popup/_is-opened/popup_is-opened.css');
