--- a/src/styles/blocks/popup/__input/-error/popup__input_type_error.css
+++ b/src/styles/blocks/popup/__input/-error/popup__input_type_error.css
@@ -1,6 +1,11 @@
 .popup__input_type_error{
+    box-sizing: border-box;
+    color: red;
+    display: flex;
+    flex-direction: column;
     font-size: 12px;
     font-weight: 400;
-    color: #FF0000;
-    margin-top: 5px;
+    justify-content: center;
+    line-height: 15px;
+    min-height: 20px;
 }
