--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -10,6 +10,7 @@
 @import url('../styles/blocks/card/__like-count/card__like-count.css');
 @import url('../styles/blocks/card/__likes/card__likes.css');
 @import url('../styles/blocks/popup/popup.css');
+@import url('../styles/blocks/popup/__button/popup__button_disabled.css');
 @import url('../styles/blocks/popup/_is-animated/popup_is-animated.css');
 @import url('../styles/blocks/popup/_is-opened/popup_is-opened.css');
 @import url('blocks/popup/__input/-error/popup__input_type_error.css');
